tests/reference/asr-incompatible_ranks_allocatable_arr2-699f9ab.stderr
semantic error: Incompatible ranks 1 and 3 in assignment
  --> tests/errors/incompatible_ranks_allocatable_arr2.f90:10:5
   |
10 |     arr3 = arr1
   |     ^^^^^^^^^^^ 
